@@ -5,6 +5,7 @@ Version 2.2 [TODO] - Maintenance release
   #32 - Allow extensions to change current image tab
   #31 - Handle ImageSet deletion
   #30 - Handle dynamic image tab panels
+  #28 - Rename/Move image set
   #27 - Add ImageSet transient option
   #26 - Image set refactoring
   #25 - Add popup dialog for image set chooser
